# waves_rs

./: Cargo.toml  LICENSE  README.md
.github/templates/: issue_report.md  pull_request.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/fdtd1d/: mod.rs
