[package]
name = "waves_rs"
version = "0.1.0"
edition = "2021"
authors = ["Sam Wyss"]
description = "A cross-platform, high-performance Rust implementation for various electromagnetic solvers."
license = "BSD-3-Clause"
license-file = "./LICENSE"
readme = "./README.md"
repository = "https://github.com/samwyss/waves_rs"
homepage = "https://github.com/samwyss/waves_rs"
documentation = "https://docs.rs/crate/waves_rs/latest"
keywords = ["simulation", "electromagnetics", "comp_physics", "comp_engineering"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
